Fix alignment of add category button on product edit

--- a/less/modules/product.less
+++ b/less/modules/product.less
@@ -384,7 +384,6 @@
 		border-bottom: 1px solid @lightGray;
 	}
 	> .btn {
-		clear: both;
 		float: right;
 	}
 }
